--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-* {
-  box-sizing: border-box;
-}
 
 /* Style the body */
 body {
@@ -27,7 +24,8 @@ body {
   background-color: #333;
   position: sticky;
   position: -webkit-sticky;
-  top: 0;
+  margin-top: 0;
+  border:0;
 }
 
 /* Style the navigation bar links */
